--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="zh-CN"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>你的名字 | 个人主页</title>
+  <title>Philo Wenxing | 个人主页</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
@@ -57,7 +57,7 @@
         <span class="bg-primary p-2 rounded-lg">
           <i class="fa fa-code"></i>
         </span>
-        <span>你的名字</span>
+        <span>Philo</span>
       </a>
       
       <!-- 桌面导航 -->
@@ -99,11 +99,11 @@
     <div class="container mx-auto px-4 relative z-10 text-center">
       <div class="max-w-3xl mx-auto">
         <h1 class="text-[clamp(2.5rem,5vw,4rem)] font-bold text-white leading-tight mb-6 text-shadow">
-          你好，我是<span class="text-yellow-300">你的名字</span>
+          你好，我是<span class="text-yellow-300">Philo</span>
         </h1>
         <p class="text-[clamp(1rem,2vw,1.25rem)] text-white/90 mb-8">
-          我是一名充满激情的<span class="text-white font-medium">前端开发工程师</span>，
-          擅长创造美观且功能强大的用户体验。
+          我是一名充满激情的<span class="text-white font-medium">生态数据科学家</span>，
+          擅长处理数据，呈现规律，构建模型。我的职业格言是：一切数值都将指向结局。
         </p>
         <div class="flex flex-col sm:flex-row justify-center gap-4">
           <a href="#projects" class="bg-white text-primary hover:bg-gray-100 px-8 py-3 rounded-lg font-medium transition-colors hover-scale">查看我的作品</a>
